fix: regression - return refreshTokenID alongside session as before (#496)
