# go/api/openapi.yaml
@@ -436,6 +436,11 @@ components:
         accessTokenExpiresIn:
           type: integer
           format: int64
+        refreshTokenId:
+          description: Refresh token id
+          example: 2c35b6f3-c4b9-48e3-978a-d4d0f1d42e24
+          pattern: \b[0-9a-f]{8}\b-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-\b[0-9a-f]{12}\b
+          type: string
         refreshToken:
           description: Refresh token during authentication or when refreshing the JWT
           example: 2c35b6f3-c4b9-48e3-978a-d4d0f1d42e24
@@ -447,6 +452,7 @@ components:
         - accessToken
         - accessTokenExpiresIn
         - refreshToken
+        - refreshTokenId
 
     SignInPATRequest:
       type: object
